Fixed issue with header where dropdown was blocking logo and clicking outside now collapses menu

--- a/src/app/styles/Header.module.css
+++ b/src/app/styles/Header.module.css
@@ -57,14 +57,14 @@
         flex-direction: column;
         width: 100%;
         position: absolute;
-        top: 60px;
+        top: 100%; /* Change this to position it right below the header */
         left: 0;
         background-color: white;
         z-index: 10; /* Ensure nav is above other content */
         transition: max-height 0.5s ease-in-out;
         overflow: hidden;
         max-height: 0;
-        
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
 
     .nav.open {
